[project]
name = "payconnect"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.1",
    "annotated-types==0.7.0",
    "anyio==4.8.0",
    "certifi==2025.1.31",
    "click==8.1.8",
    "faker==37.0.0",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "idna==3.10",
    "litestar==2.15.1",
    "litestar-htmx==0.4.1",
    "markdown-it-py==3.0.0",
    "mdurl==0.1.2",
    "msgspec==0.19.0",
    "multidict==6.1.0",
    "multipart==1.2.1",
    "mypy>=1.15.0",
    "polyfactory==2.19.0",
    "pydantic==2.10.6",
    "pydantic-core==2.27.2",
    "pygments==2.19.1",
    "pyyaml==6.0.2",
    "rich==13.9.4",
    "rich-click==1.8.8",
    "sniffio==1.3.1",
    "sqlalchemy>=2.0.38",
    "typing-extensions==4.12.2",
    "tzdata==2025.1",
    "uuid>=1.30",
    "uvicorn>=0.34.0",
]

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 88
indent-width = 4
[tool.ruff.lint]
select = ["E", "F", "B", "I", "N", "UP", "YTT", "ANN", "S", "A"]
ignore = ["ANN102"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict = true
